# duckdb-wasm

./: .gitignore  .gitmodules  CLAUDE.md  Dockerfile  Makefile  README.md  build-wasm.sh  docker-build.sh  extension_config_wasm.cmake  package-lock.json  package.json  run-tests.sh  tsconfig.json
evalexpr_rhai_wasm/: Cargo.toml
evalexpr_rhai_wasm/src/: lib.rs
hash_ext_wasm/: Cargo.toml
hash_ext_wasm/src/: lib.rs
lib/: CMakeLists.txt
lib/cmake/: arrow.cmake  duckdb.cmake  evalexpr_rhai.cmake  fts.cmake  hash_ext.cmake  lua.cmake
lib/include/duckdb/web/: config.h
lib/include/duckdb/web/extensions/: evalexpr_rhai_extension.h  fts_extension.h  hash_ext_extension.h  icu_extension.h  lua_extension.h  tpcds_extension.h  tpch_extension.h
lib/src/: webdb.cc
lib/src/extensions/: evalexpr_rhai_extension.cc  fts_extension.cc  hash_ext_extension.cc  icu_extension.cc  lua_extension.cc  lua_wasm_linit.c  tpcds_extension.cc  tpch_extension.cc
lib/src/io/: wasmfs_filesystem.cc  web_filesystem.cc
scripts/: build-wasm.sh  wasm_build_lib.sh  wasm_transport_info.js
test-rig/: bench-threads.html  buffer-reg-test.html  build.sh  coi-test.html  db-stress-test.html  evalexpr-test.html  file-stress-test.html  hash-ext-test.html  index.html  lua-test.html  metric-table-test.html  opfs-persist-test.html  package-lock.json  package.json  ping.html  puppeteer-run.mjs  run-bench.sh  run.sh  server.mjs  wasmfs-test.html  wasmfs-worker.js  wasmfs_test.wasm
test-wasmfs/: CMakeLists.txt  build.sh  wasmfs_test.c
trace-scripts/: clean.sh  docker-build.sh  publish.sh  run-tests.sh
(+1 files in other folders)
